fixed-js, fixed-overflow, fixed-fontSize-mobile

--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ ul, li {
     display: none;
   }
   h2 {
-    font-size: 6rem;
+    font-size: 3.5rem;
   }
   h3 {
     font-size: 3rem;
